--- a/Blog_Application/requirements.txt
+++ b/Blog_Application/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.8.1
 black==24.4.2
 click==8.1.7
 Django==5.0.7
+django-taggit==5.0.1
+Markdown==3.6
 mypy-extensions==1.0.0
 packaging==24.1
 pathspec==0.12.1
