--- a/Social_Website/requirements.txt
+++ b/Social_Website/requirements.txt
@@ -7,7 +7,9 @@ click==8.1.7
 cryptography==43.0.1
 defusedxml==0.8.0rc2
 Django==5.0.8
+django-extensions==3.2.3
 idna==3.10
+MarkupSafe==2.1.5
 mypy-extensions==1.0.0
 oauthlib==3.2.2
 packaging==24.1
@@ -17,6 +19,7 @@ platformdirs==4.2.2
 psycopg2-binary==2.9.9
 pycparser==2.22
 PyJWT==2.9.0
+pyOpenSSL==24.2.1
 python3-openid==3.2.0
 requests==2.32.3
 requests-oauthlib==2.0.0
@@ -24,3 +27,4 @@ social-auth-app-django==5.4.2
 social-auth-core==4.5.4
 sqlparse==0.5.1
 urllib3==2.2.3
+Werkzeug==3.0.4
