--- a/Social_Website/requirements.txt
+++ b/Social_Website/requirements.txt
@@ -20,6 +20,7 @@ psycopg2-binary==2.9.9
 pycparser==2.22
 PyJWT==2.9.0
 pyOpenSSL==24.2.1
+python-decouple==3.8
 python3-openid==3.2.0
 requests==2.32.3
 requests-oauthlib==2.0.0
