--- a/Social_Website/requirements.txt
+++ b/Social_Website/requirements.txt
@@ -8,6 +8,7 @@ cryptography==43.0.1
 defusedxml==0.8.0rc2
 Django==5.0.8
 django-extensions==3.2.3
+easy-thumbnails==2.10
 idna==3.10
 MarkupSafe==2.1.5
 mypy-extensions==1.0.0
