--- a/Social_Website/requirements.txt
+++ b/Social_Website/requirements.txt
@@ -7,6 +7,7 @@ click==8.1.7
 cryptography==43.0.1
 defusedxml==0.8.0rc2
 Django==5.0.8
+django-debug-toolbar==4.3.0
 django-extensions==3.2.3
 easy-thumbnails==2.10
 idna==3.10
