--- a/Social_Website/requirements.txt
+++ b/Social_Website/requirements.txt
@@ -24,6 +24,7 @@ PyJWT==2.9.0
 pyOpenSSL==24.2.1
 python-decouple==3.8
 python3-openid==3.2.0
+redis==5.2.0
 requests==2.32.3
 requests-oauthlib==2.0.0
 social-auth-app-django==5.4.2
