--- a/Online_Shop/requirements.txt
+++ b/Online_Shop/requirements.txt
@@ -17,7 +17,11 @@ fonttools==4.54.1
 humanize==4.11.0
 idna==3.10
 kombu==5.4.2
+mypy-extensions==1.0.0
+packaging==24.2
+pathspec==0.12.1
 pillow==10.4.0
+platformdirs==4.3.6
 prometheus_client==0.21.0
 prompt_toolkit==3.0.48
 pycparser==2.22
@@ -26,6 +30,7 @@ pyphen==0.15.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 pytz==2024.2
+redis==5.2.0
 requests==2.32.3
 six==1.16.0
 sqlparse==0.5.1
