--- a/Online_Shop/requirements.txt
+++ b/Online_Shop/requirements.txt
@@ -1,6 +1,7 @@
 amqp==5.2.0
 asgiref==3.8.1
 billiard==4.2.1
+black==24.10.0
 Brotli==1.1.0
 celery==5.4.0
 certifi==2024.8.30
@@ -12,6 +13,7 @@ click-plugins==1.1.1
 click-repl==0.3.0
 cssselect2==0.7.0
 Django==5.1.2
+django-rosetta==0.10.0
 flower==2.0.1
 fonttools==4.54.1
 humanize==4.11.0
@@ -22,6 +24,7 @@ packaging==24.2
 pathspec==0.12.1
 pillow==10.4.0
 platformdirs==4.3.6
+polib==1.2.0
 prometheus_client==0.21.0
 prompt_toolkit==3.0.48
 pycparser==2.22
