--- a/Online_Shop/requirements.txt
+++ b/Online_Shop/requirements.txt
@@ -13,6 +13,7 @@ click-plugins==1.1.1
 click-repl==0.3.0
 cssselect2==0.7.0
 Django==5.1.2
+django-parler==2.3
 django-rosetta==0.10.0
 flower==2.0.1
 fonttools==4.54.1
