--- a/Online_Shop/requirements.txt
+++ b/Online_Shop/requirements.txt
@@ -13,6 +13,7 @@ click-plugins==1.1.1
 click-repl==0.3.0
 cssselect2==0.7.0
 Django==5.1.2
+django-localflavor==4.0
 django-parler==2.3
 django-rosetta==0.10.0
 flower==2.0.1
@@ -33,6 +34,7 @@ pydyf==0.11.0
 pyphen==0.15.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
+python-stdnum==1.20
 pytz==2024.2
 redis==5.2.0
 requests==2.32.3
