--- a/E-Learning_Platform/requirements.txt
+++ b/E-Learning_Platform/requirements.txt
@@ -1,5 +1,11 @@
 asgiref==3.8.1
+certifi==2024.8.30
+charset-normalizer==3.4.0
 Django==5.1.3
 django-braces==1.16.0
+django-embed-video==1.4.10
+idna==3.10
 pillow==11.0.0
+requests==2.32.3
 sqlparse==0.5.2
+urllib3==2.2.3
