--- a/E-Learning_Platform/requirements.txt
+++ b/E-Learning_Platform/requirements.txt
@@ -3,6 +3,7 @@ certifi==2024.8.30
 charset-normalizer==3.4.0
 Django==5.1.3
 django-braces==1.16.0
+django-debug-toolbar==4.4.6
 django-embed-video==1.4.10
 idna==3.10
 pillow==11.0.0
