--- a/E-Learning_Platform/requirements.txt
+++ b/E-Learning_Platform/requirements.txt
@@ -1,13 +1,16 @@
 asgiref==3.8.1
+attrs==24.2.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 Django==5.1.3
 django-braces==1.16.0
 django-debug-toolbar==4.4.6
 django-embed-video==1.4.10
+django-redisboard==8.4.0
 idna==3.10
 pillow==11.0.0
 pymemcache==4.0.0
+redis==5.2.1
 requests==2.32.3
 sqlparse==0.5.2
 urllib3==2.2.3
