--- a/E-Learning_Platform/requirements.txt
+++ b/E-Learning_Platform/requirements.txt
@@ -5,6 +5,7 @@ Automat==24.8.1
 certifi==2024.8.30
 cffi==1.17.1
 channels==4.2.0
+channels_redis==4.2.1
 charset-normalizer==3.4.0
 constantly==23.10.4
 cryptography==44.0.0
@@ -18,6 +19,7 @@ djangorestframework==3.15.2
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
+msgpack==1.1.0
 pillow==11.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
