--- a/E-Learning_Platform/educa/requirements.txt
+++ b/E-Learning_Platform/educa/requirements.txt
@@ -21,6 +21,7 @@ idna==3.10
 incremental==24.7.2
 msgpack==1.1.0
 pillow==11.0.0
+psycopg==3.2.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
