Chapter17: Using Docker Compose
Adding the Python requirements
Configuring the PostgreSQL service
Applying database migrations and creatings a superuser
Configuring the Redis

--- a/E-Learning_Platform/Dockerfile
+++ b/E-Learning_Platform/Dockerfile
@@ -10,7 +10,7 @@ WORKDIR /code
 
 # Install dependencies
 RUN pip install --upgrade pip
-COPY requirement.txt .
+COPY requirements.txt .
 RUN pip install -r requirements.txt
 
 # Copy the Django project
