--- a/E-Learning_Platform/config/nginx/default.conf.template
+++ b/E-Learning_Platform/config/nginx/default.conf.template
@@ -4,10 +4,18 @@ upstream uwsgi_app {
 }
 
 server {
-    listen 80;
-    server_name www.educaproject.com educaproject.com;
-    error_log   stderr warn;
-    access_log  /dev/stdout main;
+    listen       80;
+    server_name *.educaproject.com educaproject.com;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen                443 ssl;
+    ssl_certificate      /code/educa/ssl/educa.crt;
+    ssl_certificate_key  /code/educa/ssl/educa.key;
+    server_name          www.educaproject.com educaproject.com;
+    error_log            stderr warn;
+    access_log           /dev/stdout main;
 
     location / {
         include     /etc/nginx/uwsgi_params;
